# ocaml-modules

./: .gitignore  README.md
ml00/: CMakeLists.txt  Makefile  dune-project  main.ml
ml00/ex00/: dune  ft_test_sign.ml  main.ml
ml00/ex01/: dune  ft_countdown.ml
ml00/tests/: test_ft_countdown.ml  test_ft_sign.ml
ml01/: CMakeLists.txt
practice/: CMakeLists.txt
practice/begin/: main.cmi  main.cmx  main.ml
